Fixed DB and Link html link

--- a/templates/book_hotel.html
+++ b/templates/book_hotel.html
@@ -152,18 +152,18 @@
                        class="form-control" 
                        id="check_in" 
                        name="check_in"
-                       min="{{ (now + timedelta(days=1)).strftime('%Y-%m-%d') }}"
+                       min="{{ min_check_in }}"
                        required>
             </div>
             <div>
                 <label for="check_out" class="form-label">
                     <i class="fas fa-calendar-day me-1"></i> วันที่เช็คเอาท์
                 </label>
-                <input type="date" 
-                       class="form-control" 
-                       id="check_out" 
+                <input type="date"
+                       class="form-control"
+                       id="check_out"
                        name="check_out"
-                       min="{{ (now + timedelta(days=2)).strftime('%Y-%m-%d') }}"
+                       min="{{ min_check_out }}"
                        required>
             </div>
         </div>
