--- a/templates/search.html
+++ b/templates/search.html
@@ -358,52 +358,48 @@
     <div class="card-body">
         <div class="row">
             <div class="col-md-3 mb-3">
-                <div class="card border-0" style="cursor: pointer;">
+                <a href="{{ url_for('province_detail', slug='bangkok') }}" class="card border-0" style="cursor: pointer; text-decoration: none; color: inherit;">
                     <div class="hotel-image-placeholder">
                         <i class="fas fa-city"></i>
-                        <!-- TODO: แทนที่ด้วย <img src="/static/images/bangkok.jpg" class="card-img-top" alt="Bangkok"> -->
                     </div>
                     <div class="card-body text-center">
                         <h6>กรุงเทพฯ</h6>
                         <p style="font-size: 0.85rem; color: var(--text-light); margin: 0;">โรงแรม 234 แห่ง</p>
                     </div>
-                </div>
+                </a>
             </div>
             <div class="col-md-3 mb-3">
-                <div class="card border-0" style="cursor: pointer;">
+                <a href="{{ url_for('province_detail', slug='phuket') }}" class="card border-0" style="cursor: pointer; text-decoration: none; color: inherit;">
                     <div class="hotel-image-placeholder">
                         <i class="fas fa-umbrella-beach"></i>
-                        <!-- TODO: แทนที่ด้วย <img src="/static/images/phuket.jpg" class="card-img-top" alt="Phuket"> -->
                     </div>
                     <div class="card-body text-center">
                         <h6>ภูเก็ต</h6>
                         <p style="font-size: 0.85rem; color: var(--text-light); margin: 0;">โรงแรม 189 แห่ง</p>
                     </div>
-                </div>
+                </a>
             </div>
             <div class="col-md-3 mb-3">
-                <div class="card border-0" style="cursor: pointer;">
+                <a href="{{ url_for('province_detail', slug='chiangmai') }}" class="card border-0" style="cursor: pointer; text-decoration: none; color: inherit;">
                     <div class="hotel-image-placeholder">
                         <i class="fas fa-mountain"></i>
-                        <!-- TODO: แทนที่ด้วย <img src="/static/images/chiangmai.jpg" class="card-img-top" alt="Chiang Mai"> -->
                     </div>
                     <div class="card-body text-center">
                         <h6>เชียงใหม่</h6>
                         <p style="font-size: 0.85rem; color: var(--text-light); margin: 0;">โรงแรม 156 แห่ง</p>
                     </div>
-                </div>
+                </a>
             </div>
             <div class="col-md-3 mb-3">
-                <div class="card border-0" style="cursor: pointer;">
+                <a href="{{ url_for('province_detail', slug='pattaya') }}" class="card border-0" style="cursor: pointer; text-decoration: none; color: inherit;">
                     <div class="hotel-image-placeholder">
                         <i class="fas fa-water"></i>
-                        <!-- TODO: แทนที่ด้วย <img src="/static/images/pattaya.jpg" class="card-img-top" alt="Pattaya"> -->
                     </div>
                     <div class="card-body text-center">
                         <h6>พัทยา</h6>
                         <p style="font-size: 0.85rem; color: var(--text-light); margin: 0;">โรงแรม 198 แห่ง</p>
                     </div>
-                </div>
+                </a>
             </div>
         </div>
     </div>
