--- a/templates/base.html
+++ b/templates/base.html
@@ -359,6 +359,11 @@
                             </a>
                         </li>
                         <li class="nav-item">
+                            <a class="nav-link" href="{{ url_for('provinces') }}">
+                                <i class="fas fa-map-marked-alt"></i> จังหวัด
+                            </a>
+                        </li>
+                        <li class="nav-item">
                             <a class="nav-link" href="{{ url_for('search') }}">
                                 <i class="fas fa-search"></i> ค้นหาโรงแรม
                             </a>
