--- a/templates/base.html
+++ b/templates/base.html
@@ -365,7 +365,7 @@
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="{{ url_for('search') }}">
-                                <i class="fas fa-search"></i> ค้นหาโรงแรม
+                                <i class="fas fa-search"></i> ค้นหาผู้ใช้
                             </a>
                         </li>
                         <li class="nav-item">
