--- a/templates/login.html
+++ b/templates/login.html
@@ -24,7 +24,7 @@
 
     .login-image {
         width: 45%;
-        background: url('https://images.unsplash.com/photo-1566073771259-6a8506099945?w=600&h=900&fit=crop') center/cover no-repeat;
+        background: url('/static/images/hotels/grand-palace-hotel.jpg') center/cover no-repeat;
         position: relative;
         display: flex;
         align-items: flex-end;
