--- a/templates/signup.html
+++ b/templates/signup.html
@@ -24,7 +24,7 @@
 
     .signup-image {
         width: 40%;
-        background: url('https://images.unsplash.com/photo-1520250497591-112f2f40a3f4?w=600&h=900&fit=crop') center/cover no-repeat;
+        background: url('/static/images/hotels/riverside-boutique.jpg') center/cover no-repeat;
         position: relative;
         display: flex;
         align-items: flex-end;
